Set-up the databse

--- a/jobwiseai-backend/src/main/resources/application.properties
+++ b/jobwiseai-backend/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=jobwiseai-backend
+spring.datasource.url=jdbc:postgresql://local-postgres:54876/jobwiseai_db
+spring.datasource.username=jobwise_user
+spring.datasource.password=nyiko@07
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
